--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="page-header">
-        <p class="write">writings.dev</p>
-        <p class="categories">categories</p>
-        <p class="articles">articles</p>
-        <p class="about">about</p>
+        <div class="top-header">
+            <p class="write">writings.dev</p>
+            <div class="words">
+                <p class="cat">categories</p>
+                <p class="cat">articles</p>
+                <p class="cat">about</p>
+            </div>
+        </div>
+        <div class="low-header">
+            <img src="developer.png">
+            
+        </div>
     </div>
 </body>
 </html>
