--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 <body>
     <div class="page-header">
         <div class="top-header">
-            <p class="write">writings.dev</p>
+            <p class="write">FRACT-OL</p>
             <div class="words">
-                <p class="cat">categories</p>
+                <p class="cat">sets</p>
                 <p class="cat">articles</p>
                 <p class="cat">about</p>
             </div>
         </div>
         <div class="low-header">
-            <img src="developer.png">
-            
+            <div class="img-div">
+                <img src="mcmjul1.png" class="img-dev">
+            </div>
+            <div class="title">
+                <h2 class="fractol">This is a fract-ol project in 1337</h2>
+            </div>
+            <div class="description">
+                <p class="descr-p">The fract-ol project from the 1337 School is one of the three "beginner" graphical projects of the cursus. It teaches you about manipulating a low-level graphic library, advanced math, and more.</p>
+            </div>
         </div>
     </div>
 </body>
