--- a/index.html
+++ b/index.html
@@ -31,5 +31,26 @@
             </div>
         </div>
     </div>
+    <div class="body-page">
+        <div class="chapiter-1">
+            <div class="chapiter-title">
+                <h3>CHAPITER 1: <h4>how we can drawing in c</h4></h3>
+            </div>
+            <div class="chapiter-text">
+                <p>First of all you should know what is <a href="https://harm-smits.github.io/42docs/libs/minilibx">MINILIBX</a><br>In short, it's library in c that makes it easier for you to work with <a href="https://www.x.org/wiki/">X Window server</a><br>and to understand more, watch this video</p>
+            </div>
+            <div class="minilibx-video">
+                <iframe  width="560" height="315" src="https://www.youtube.com/embed/bYS93r6U0zg?si=BaG6fMiGJ14JotiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="chapiter-2">
+            <div class="chapiter-title">
+                <h3>CHAPITER 2: <h4>how to do Fract-ol?</h4></h3>
+            </div>
+            <div class="chapiter-text">
+                <p></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
