--- a/index.html
+++ b/index.html
@@ -10,45 +10,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page-header">
-        <div class="top-header">
-            <p class="write">FRACT-OL</p>
-            <div class="words">
-                <p class="cat">sets</p>
-                <p class="cat">articles</p>
-                <p class="cat">about</p>
-            </div>
-        </div>
-        <div class="low-header">
-            <div class="img-div">
-                <img src="mcmjul1.png" class="img-dev">
-            </div>
-            <div class="title">
-                <h2 class="fractol">This is a fract-ol project in 1337</h2>
-            </div>
-            <div class="description">
-                <p class="descr-p">The fract-ol project from the 1337 School is one of the three "beginner" graphical projects of the cursus. It teaches you about manipulating a low-level graphic library, advanced math, and more.</p>
-            </div>
-        </div>
+    <div class="desktop-message">
+        <p>This website is only accessible on desktop devices. (SIR CHRI PC ADMI🤣)</p>
     </div>
-    <div class="body-page">
-        <div class="chapiter-1">
-            <div class="chapiter-title">
-                <h3>CHAPITER 1: <h4>how we can drawing in c</h4></h3>
+    <div class="content">
+        
+        <div class="page-header">
+            <div class="top-header">
+                <p class="write">FRACT-OL</p>
+                <div class="words">
+                    <p class="cat">sets</p>
+                    <p class="cat">articles</p>
+                    <p class="cat">about</p>
+                </div>
             </div>
-            <div class="chapiter-text">
-                <p>First of all you should know what is <a href="https://harm-smits.github.io/42docs/libs/minilibx">MINILIBX</a><br>In short, it's library in c that makes it easier for you to work with <a href="https://www.x.org/wiki/">X Window server</a><br>and to understand more, watch this video</p>
-            </div>
-            <div class="minilibx-video">
-                <iframe  width="560" height="315" src="https://www.youtube.com/embed/bYS93r6U0zg?si=BaG6fMiGJ14JotiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="low-header">
+                <div class="img-div">
+                    <img src="mcmjul1.png" class="img-dev">
+                </div>
+                <div class="title">
+                    <h2 class="fractol">This is a fract-ol project in 1337</h2>
+                </div>
+                <div class="description">
+                    <p class="descr-p">The fract-ol is project from the 1337 School is one of the three "beginner" graphical projects of the cursus. <br> It teaches you about manipulating a low-level graphic library, advanced math, and more.</p>
+                </div>
             </div>
         </div>
-        <div class="chapiter-2">
-            <div class="chapiter-title">
-                <h3>CHAPITER 2: <h4>how to do Fract-ol?</h4></h3>
+        <div class="body-page">
+            <div class="chapiter-1">
+                <div class="chapiter-title">
+                    <h3>CHAPITER 1: <h4>how we can drawing in c</h4></h3>
+                </div>
+                <div class="chapiter-text">
+                    <p>First of all you should know what is <a href="https://harm-smits.github.io/42docs/libs/minilibx">MINILIBX</a><br>In short, it's library in c that makes it easier for you to work with <a href="https://www.x.org/wiki/">X Window server</a><br>and to understand more, watch this video</p>
+                </div>
+                <div class="minilibx-video">
+                    <iframe  width="560" height="315" src="https://www.youtube.com/embed/bYS93r6U0zg?si=BaG6fMiGJ14JotiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
-            <div class="chapiter-text">
-                <p></p>
+            <div class="chapiter-2">
+                <div class="chapiter-title">
+                    <h3>CHAPITER 2: <h4>how to do Fract-ol?</h4></h3>
+                </div>
+                <div class="chapiter-text">
+                    <h4>we need to know how fractal works?</h4>
+                </div>
+                <div class="chapiter-text">
+                    <p>simply put, every fractal relies on a mathematical process to make it work.<br>For example, the Julia and Mandelbrot sets are defined by the following suite: <br><img class="fractal-img" width="249" height="34" src="https://miro.medium.com/v2/resize:fit:249/1*dHoYwHwcdxKvvVBdfMFpcg.png"></p>
+                </div>
             </div>
         </div>
     </div>
