--- a/index.html
+++ b/index.html
@@ -56,8 +56,39 @@
                     <h4>we need to know how fractal works?</h4>
                 </div>
                 <div class="chapiter-text">
-                    <p>simply put, every fractal relies on a mathematical process to make it work.<br>For example, the Julia and Mandelbrot sets are defined by the following suite: <br><img class="fractal-img" width="249" height="34" src="https://miro.medium.com/v2/resize:fit:249/1*dHoYwHwcdxKvvVBdfMFpcg.png"></p>
+                    <p>simply put, every fractal relies on a mathematical process to make it work.<br>For example, the Julia and Mandelbrot sets are defined by the following suite: <br><img class="fractal-img" width="249" height="34" src="https://miro.medium.com/v2/resize:fit:249/1*dHoYwHwcdxKvvVBdfMFpcg.png"><br>this is a complex number from mandelbrot and julia. <br>All fractals are based on complex numbers (i.e. numbers with a real and imaginary part, like z = a + bi)</p>
                 </div>
+                <div class="chapiter-text">
+                    <h3>Did you understand?? <br>no!! <br>  </h3>
+                </div>
+                <div class="chapiter-text">
+                    <h4>ok, watch this video and come back</h4>
+                </div>
+                <div class="minilibx-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ANLW1zYbLcs?si=NUSqGtP-vv70n0Qt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="chapiter-text">
+                    <p>after this video i think you are now capable of making fractol in c, like mandelbrot and julia, and make the zoom and the shift and colors<br></p>
+                </div>
+                <div class="chapiter-text">
+                    <h5>if you need more information on this topic</h5>
+                </div>
+                <div class="chapiter-text">
+                    <p>I advice you to visit this <a href="https://medium.com/@leogaudin/fract-ol-creating-graphically-beautiful-fractals-6664b6b045b5">link</a>, <br> and watch more videos like this video:</p>
+                </div>
+                <div class="minilibx-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wUlVFYJIUNA?si=_cVLZ6xpWJBVhrUm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="chapiter-text">
+                    <h6>(sorry for this fucking french)</h6>
+                </div>
+                <div class="chapiter-text">
+                    <h3>and we're done!!</h3>
+                </div>
+            </div>
+            <div class="rights">
+                <h3>All rights reserved ©</h3>
+                <h5>toxic_'\0'</h5>
             </div>
         </div>
     </div>
