--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="top-header">
                 <p class="write">FRACT-OL</p>
                 <div class="words">
-                    <p class="cat">sets</p>
-                    <p class="cat">articles</p>
-                    <p class="cat">about</p>
+                    <a href="https://en.wikipedia.org/wiki/Fractal" class="cat"><p>sets</p></a>
+                    <a href="https://coolors.co/eac435-345995-03cea4-fb4d3d-ca1551" class="cat">colors</a>
+                    <a href="https://github.com/26TOXIC26/fractol_page" class="cat">about</a>
                 </div>
             </div>
             <div class="low-header">
@@ -42,7 +42,7 @@
                     <h3>CHAPITER 1: <h4>how we can drawing in c</h4></h3>
                 </div>
                 <div class="chapiter-text">
-                    <p>First of all you should know what is <a href="https://harm-smits.github.io/42docs/libs/minilibx">MINILIBX</a><br>In short, it's library in c that makes it easier for you to work with <a href="https://www.x.org/wiki/">X Window server</a><br>and to understand more, watch this video</p>
+                    <p>First of all you should know what is <a href="https://harm-smits.github.io/42docs/libs/minilibx" class="link">MINILIBX</a><br>In short, it's library in c that makes it easier for you to work with <a href="https://www.x.org/wiki/" class="link">X Window server</a><br>and to understand more, watch this video</p>
                 </div>
                 <div class="minilibx-video">
                     <iframe  width="560" height="315" src="https://www.youtube.com/embed/bYS93r6U0zg?si=BaG6fMiGJ14JotiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -74,7 +74,7 @@
                     <h5>if you need more information on this topic</h5>
                 </div>
                 <div class="chapiter-text">
-                    <p>I advice you to visit this <a href="https://medium.com/@leogaudin/fract-ol-creating-graphically-beautiful-fractals-6664b6b045b5">link</a>, <br> and watch more videos like this video:</p>
+                    <p>I advice you to visit this <a href="https://medium.com/@leogaudin/fract-ol-creating-graphically-beautiful-fractals-6664b6b045b5" class="link">link</a>, <br> and watch more videos like this video:</p>
                 </div>
                 <div class="minilibx-video">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/wUlVFYJIUNA?si=_cVLZ6xpWJBVhrUm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -110,7 +110,7 @@
                     </a>
                     <a href="https://www.linkedin.com/in/abdelilah-mousaid-a1a7b0247/">
                         <button class="card4">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20 fill="currentColor" class="linkedin" viewBox="0 0 16 16"> <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" fill="currentColor" class="linkedin" viewBox="0 0 16 16"> <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/></svg>
                         </button>
                     </a>
                 </div>
