--- a/index.html
+++ b/index.html
@@ -82,6 +82,49 @@
                 <div class="chapiter-text">
                     <h6>(sorry for this fucking french)</h6>
                 </div>
+                <div class="photos">
+                    <div class="chapiter-title">
+                        <h3>photos of some fractals</h3>
+                    </div>
+                    <div class="chapiter-text">
+                        <h4>Mandelbrot</h4>
+                    </div>
+                    <div class="img-div">
+                        <img src="https://www.codingame.com/servlet/fileservlet?id=13848520651734" class="img-fra">
+                    </div>
+                    <div class="chapiter-text">
+                        <h4>Julia</h4>
+                    </div>
+                    <div class="img-div">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Julia_set_%28highres_01%29.jpg/800px-Julia_set_%28highres_01%29.jpg" class="img-fra">
+                    </div>
+                    <div class="chapiter-text">
+                        <h4>burning-ship</h4>
+                    </div>
+                    <div class="img-div">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Burning_Ship_0002_20210818.png/800px-Burning_Ship_0002_20210818.png" class="img-fra">
+                    </div>
+
+                </div>
+                <div class="source">
+                    <div class="chapiter-title">
+                        <h3>Code source of all sets</h3>
+                    </div>
+                    <div class="button-src">
+                        <a href="https://github.com/26TOXIC26/fractol/blob/main/src/mandelbrot.c">
+                            <button class="btn">Mandelbrot</button>
+                        </a>
+                        <a href="https://github.com/26TOXIC26/fractol/blob/main/src/julia.c">
+                            <button class="btn">Julia</button>
+                        </a>
+                        <a href="https://github.com/26TOXIC26/fractol/blob/main/src/burning_ship.c">
+                            <button class="btn">Ship</button>
+                        </a>
+                        <a href="https://github.com/26TOXIC26/fractol">
+                            <button class="btn">Full project</button>
+                        </a>
+                    </div>
+                </div>
                 <div class="chapiter-text">
                     <h3>and we're done!!</h3>
                 </div>
