--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="low-header">
                 <div class="img-div">
-                    <img src="mcmjul1.png" class="img-dev">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Mandelbrot_set_image.png" class="img-dev">
                 </div>
                 <div class="title">
                     <h2 class="fractol">This is a fract-ol project in 1337</h2>
